Fix missing margin style for translation tables

--- a/resources/styles/yawnoc.css
+++ b/resources/styles/yawnoc.css
@@ -506,6 +506,11 @@ p.thought {
 }
 
 
+.translation {
+  margin: 0.7em;
+}
+
+
 .translator-supplied {
   color: #595959;
 }
